change placeholder text and fixing css spacing

--- a/src/components/TodoContainer/TodoContainer.scss
+++ b/src/components/TodoContainer/TodoContainer.scss
@@ -5,7 +5,7 @@
 .todo-container {
   margin-left: 1rem;
   margin-right: 1rem;
-  margin-top: 1rem;
+
   background-color: $transparent-background;
   border-radius: 10px;
   padding-left: 1rem;
