--- a/src/partials/_global.scss
+++ b/src/partials/_global.scss
@@ -18,8 +18,9 @@
 
 .title {
   text-align: center;
-  padding-top: 1rem;
-  color: rgb(89, 233, 255);
+  padding-top: 1.6rem;
+  padding-bottom: 1.6rem;
+  color: black;
 }
 
 /* http://meyerweb.com/eric/tools/css/reset/ 
